force-app/main/default/objects/Endereco__c/Endereco__c.object-meta.xml
<CustomObject>
    <label>Endereço</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Endereço Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Endereços</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>