force-app/main/default/objects/Endereco__c/fields/Geolocalizacao__c.field-meta.xml
<CustomField>
    <fullName>Geolocalizacao__c</fullName>
    <label>Geolocalização</label>
    <scale>10</scale>
    <type>Location</type>
</CustomField>