force-app/main/default/objects/Endereco__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brasil</fullName>
                <default>true</default>
                <label>Brasil</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>