force-app/main/default/objects/Endereco__c/fields/TipoEndereco__c.field-meta.xml
<CustomField>
    <fullName>TipoEndereco__c</fullName>
    <label>Tipo de Endereço</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Cobrança</fullName>
            </value>
            <value>
                <fullName>Entrega</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>